# Burrows-Wheeler-Transform

./: .gitignore  README.md
BurrowsWheelerTransform/: CMakeLists.txt
BurrowsWheelerTransform/includes/: BWT.h
BurrowsWheelerTransform/input/: dna_sequence.txt
BurrowsWheelerTransform/output/: loremipsum_encoded.txt
BurrowsWheelerTransform/src/: BWT.cpp  Main.cpp
